@@ -17,9 +17,9 @@ $Id$
 
 import os
 
-from AccessControl import ClassSecurityInfo
-from Globals import InitializeClass
-from Globals import package_home
+from AccessControl.SecurityInfo import ClassSecurityInfo
+from App.class_init import default__class_init__ as InitializeClass
+from App.Common import package_home
 from OFS.SimpleItem import SimpleItem
 from Products.PageTemplates.PageTemplateFile import PageTemplateFile
 from zope.interface import implements
@@ -28,9 +28,9 @@ from Products.CMFCore.Expression import Expression
 from Products.CMFCore.utils import registerToolInterface
 from Products.CMFCore.utils import UniqueObject
 
-from interfaces import IActionIconsTool
-from permissions import ManagePortal
-from permissions import View
+from Products.CMFActionIcons.interfaces import IActionIconsTool
+from Products.CMFActionIcons.permissions import ManagePortal
+from Products.CMFActionIcons.permissions import View
 
 _wwwdir = os.path.join( package_home( globals() ), 'www' )
 
